--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-
+  <main class="aba-principal">
 
   <a name="home"></a>
   <!-- Header barra de pesquisa-->
@@ -227,6 +227,7 @@
       class="bi bi-arrow-up-short"></i></a>
   <!-- Bootstrap JS -->
 
+</main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
