Ajuste de responsividade em todo o site

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <!-- <li class="nav-item"><a class="nav-link" href="#home">Home</a></li> -->
+            <li class="nav-item"><a class="nav-link" href="#home"><span class="tela-atual">Home</span></a></li>
             <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
             <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
@@ -121,7 +121,7 @@
 
     <div class="d-flex justify-content-center m-1 principal container-fluid">
       <div class="row">
-        <div class="card m-3 col-sm-3" style="width: 15rem;">
+        <div class="card m-3 col-sm-3 item-promo" style="width: 15rem;">
           <img src="src/imagens/coleira.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -130,7 +130,7 @@
           </div>
         </div>
 
-        <div class="card m-3 col-sm-3" style="width: 15rem;">
+        <div class="card m-3 col-sm-3 item-promo" style="width: 15rem;">
           <img src="src/imagens/racao.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Ração Nitrulus</h5>
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <div class="card m-3 col-sm-3" style="width: 15rem;">
+        <div class="card m-3 col-sm-3 item-promo" style="width: 15rem;">
           <img src="src/imagens/kitShampoo.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Kit Shampoo</h5>
@@ -148,7 +148,7 @@
           </div>
         </div>
 
-        <div class="card m-3 col-sm-3" style="width: 15rem;">
+        <div class="card m-3 col-sm-3 item-promo" style="width: 15rem;">
           <img src="src/imagens/premier-cookie.jpg " class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Torrões Pipicat</h5>
