--- a/login.html
+++ b/login.html
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
 
 <head>
+
+    <main class="principal-login">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRDVEXG8BS"></script>
     <script>
@@ -44,7 +46,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
                             <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li> -->
+                            <li class="nav-item"><a class="nav-link" href="login.html"><span class="tela-atual">Login</span></a></li>
                         </ul>
                     </div>
                 </nav>
@@ -64,12 +66,14 @@
             
             <form class="aba-cadastroUsuario" action="" method="">
                 <section class="cartao">
-                    <legend class="">Login</legend>
+                    <legend class="">Acesse sua conta</legend>
                     <aside class="setorCadastro">
+                        <!-- Email <br> -->
                         <input name="email" id="email" class="input" type="email" placeholder="Email" required>
                         <div class="esquecisenha"><a href="cadastro.html">Esqueci minha senha</a></div>
 
                         <div class="aba-senha">
+                            <!-- <label for="">Senha</label> -->
                             <input name="senha" id="senha" type="password" placeholder="Senha" required>
                             <img src="../imagens/olhoAberto.png" class="visualizarSenha" width="20px" alt="">
                         </div>
@@ -119,7 +123,9 @@
     </main>
 
     <a class="btn btn-primary botaotopo" style="position: fixed; bottom: 10px; right: 10px;" href="#home"
+    
         role="button"><i class="bi bi-arrow-up-short"></i></a>
+    </main>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
