--- a/produtos.html
+++ b/produtos.html
@@ -48,7 +48,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li> -->
+                        <li class="nav-item"><a class="nav-link" href="produtos.html"><span class="tela-atual">Produtos</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="#mensagem">Mensagem</a></li> -->
