--- a/produtos.html
+++ b/produtos.html
@@ -48,11 +48,17 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="produtos.html"><span class="tela-atual">Produtos</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="produtos.html"><span
+                                    class="tela-atual">Produtos</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="#mensagem">Mensagem</a></li> -->
                     </ul>
+                    <a href="carrinho.html"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                            fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                            <path
+                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                        </svg></a>
                 </div>
             </nav>
         </div>
@@ -134,8 +140,9 @@
 
 
         <section class=" aba-produtos">
-        <!-- -------------------------------------------------------------------------------PRODUTO 1 -->
+
         <div class=" row aba-produtos-linha ">
+            <!-- -------------------------------------------------------------------------------PRODUTO 1 -->
             <a href="item.html" class="col-sm-3">
                 <aside class="produto ">
                     <h2>Premier Cookie</h2>
@@ -148,6 +155,10 @@
                     </div>
                     <div class="valores">
                         <h4><span class="desc-valor">a partir </span>R$ 15,00</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 54,85</span>
+                            <span class="desc-valor">R$ 29,90</span>
+                        </div> -->
                     </div>
 
                 </aside>
@@ -156,113 +167,214 @@
 
 
             <!-- -------------------------------------------------------------------------------PRODUTO 2 -->
-            <aside class="produto" class="col-sm-3">
-                <h2>Kit Shampoo</h2>
-                <div>
-                    <img src="src/imagens/kitShampoo.jpg" class="imagem-produto" alt="">
-                </div>
-                <div class="descricao">
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto">
+                    <h2>Kit Shampoo</h2>
+                    <div>
+                        <img src="src/imagens/kitShampoo.jpg" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
 
-                    <p> Hidrata, limpa, perfuma e amacia a pelagem deixando mais brilhosa. </p>
-                </div>
-                <div class="valores">
-                    <h4><span class="desc-valor">a partir </span>R$ 25,00</h4>
-                </div>
+                        <p> Hidrata, limpa, perfuma e amacia a pelagem deixando mais brilhosa. </p>
+                    </div>
+                    <div class="valores">
+                        <h4><span class="desc-valor">a partir </span>R$ 25,00</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 38,48</span>
+                            <span class="desc-valor">R$ 24,30</span>
+                        </div> -->
+                    </div>
 
-            </aside>
+                </aside>
+            </a>
 
             <!-- -------------------------------------------------------------------------------PRODUTO 3 -->
-            <aside class="produto" class="col-sm-3">
-                <h2>Coleira</h2>
-                <div>
-                    <img src="src/imagens/coleira.png" class="imagem-produto" alt="">
-                </div>
-                <div class="descricao">
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto">
+                    <h2>Coleira</h2>
+                    <div>
+                        <img src="src/imagens/coleira.png" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
 
-                    <p>Segurança e Controle para Cães Fortes e grandes.</p>
-                </div>
-                <div class="..valores">
-                    <h4><span class="desc-valor">a partir </span>R$ 30,00</h4>
-                </div>
+                        <p>Coleira reforçada para Segurança e Controle para Cães Fortes e grandes.</p>
+                    </div>
+                    <div class="..valores">
+                        <h4><span class="desc-valor">a partir </span>R$ 30,00</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 68,40</span>
+                            <span class="desc-valor">R$ 45,90</span>
+                        </div> -->
+                    </div>
 
-            </aside>
+                </aside>
+            </a>
             <!-- -------------------------------------------------------------------------------PRODUTO 4 -->
-            <aside class="produto" class="col-sm-3">
-                <h2>Kelco Areia</h2>
-                <div>
-                    <img src="src/imagens/pipicat.jpg" class="imagem-produto" alt="">
-                </div>
-                <div class="descricao">
-
-                    <p>Kelco Areia Higiênica Pipicat Campestre 4Kg Para Gatos.</p>
-                </div>
-                <div class="valores">
-                    <h4><span class="desc-valor">a partir </span>R$ 25,00</h4>
-                </div>
-
-            </aside>
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto">
+                    <h2>Kelco Areia</h2>
+                    <div>
+                        <img src="src/imagens/pipicat.jpg" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
+                        <p>Kelco Areia Higiênica Pipicat Campestre 4Kg Para Gatos.</p>
+                    </div>
+                    <div class="valores">
+                        <h4><span class="desc-valor">a partir </span>R$ 25,00</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 23,20</span>
+                            <span class="desc-valor">R$ 14,90</span>
+                        </div> -->
+                    </div>
+                </aside>
+            </a>
         </div> <!--------------------- final do row -->
-
-
 
         <div class="row aba-produtos-linha  ">
             <!-- -------------------------------------------------------------------------------PRODUTO 5 -->
-            <aside class="produto" class="col-sm-3">
-                <h2>Ração Nutrilus</h2>
-                <div>
-                    <img src="src/imagens/racao.png" class="imagem-produto" alt="">
-                </div>
-                <div class="descricao">
-                    <p>Ração Seca Nutrilus Pro+ Frango & Carne para Cães Adultos.</p>
-                </div>
-                <div class="valores">
-                    <h4> <span class="desc-valor">a partir </span> R$ 50,99</h4>
-                </div>
-
-            </aside>
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto ">
+                    <h2>Ração Nutrilus</h2>
+                    <div>
+                        <img src="src/imagens/racao.png" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
+                        <p>Ração Seca Nutrilus Pro+ Frango & Carne para Cães Adultos.</p>
+                    </div>
+                    <div class="valores">
+                        <h4> <span class="desc-valor">a partir </span> R$ 50,99</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 23,20</span>
+                            <span class="desc-valor">R$ 14,90</span>
+                        </div> -->
+                    </div>
+                </aside>
+            </a>
             <!-- -------------------------------------------------------------------------------PRODUTO 6 -->
-            <aside class="produto" class="col-sm-3">
-                <h2>Tapetes</h2>
-                <div>
-                    <img src="src/imagens/toalhas.jpg" class="imagem-produto" alt="">
-                </div>
-                <div class="descricao">
-
-                    <p>Super Secão Citrus Tapetes Higiênicos 30 Unidades Para Cães.</p>
-                </div>
-                <div class="valores">
-                    <h4><span class="desc-valor">a partir </span>R$ 89,00</h4>
-                </div>
-            </aside>
-
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto ">
+                    <h2>Tapetes</h2>
+                    <div>
+                        <img src="src/imagens/toalhas.jpg" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
+                        <p>Super Secão Citrus Tapetes Higiênicos 30 Unidades Para Cães.</p>
+                    </div>
+                    <div class="valores">
+                        <h4><span class="desc-valor">a partir </span>R$ 89,00</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 23,20</span>
+                            <span class="desc-valor">R$ 14,90</span>
+                        </div> -->
+                    </div>
+                </aside>
+            </a>
             <!-- -------------------------------------------------------------------------------PRODUTO 7 -->
-            <aside class="produto" class="col-sm-3">
-                <h2>Areia Higiênica </h2>
-                <div>
-                    <img src="src/imagens/areia7.png" class="imagem-produto" alt="">
-                </div>
-                <div class="descricao">
-                    <p>Areia Higiênica Meau Biodegradável Grãos Médios para Gatos.</p>
-                </div>
-                <div class="valores">
-                    <h4> <span class="desc-valor">a partir </span> R$ 24,99</h4>
-                </div>
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto" class="col-sm-3">
+                    <h2>Areia Higiênica </h2>
+                    <div>
+                        <img src="src/imagens/areia7.png" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
+                        <p>Areia Higiênica Meau Biodegradável Grãos Médios para Gatos.</p>
+                    </div>
+                    <div class="valores">
+                        <h4> <span class="desc-valor">a partir </span> R$ 24,99</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 23,20</span>
+                            <span class="desc-valor">R$ 14,90</span>
+                        </div> -->
+                    </div>
 
-            </aside>
+                </aside>
+            </a>
             <!-- -------------------------------------------------------------------------------PRODUTO 8-->
-            <aside class="produto" class="col-sm-3">
-                <h2>Bowl Future Pet</h2>
-                <div>
-                    <img src="src/imagens/travessa.jpg" class="imagem-produto" alt="">
-                </div>
-                <div class="descricao">
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto" class="col-sm-3">
+                    <h2>Bowl Future Pet</h2>
+                    <div>
+                        <img src="src/imagens/travessa.jpg" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
 
-                    <p>Material resistente à ferrugem e tem peso para não deslizar.</p>
-                </div>
-                <div class="valores">
-                    <h4><span class="desc-valor">a partir </span>R$ 37,00</h4>
-                </div>
-            </aside>
+                        <p>Material resistente à ferrugem e tem peso para não deslizar.</p>
+                    </div>
+                    <div class="valores">
+                        <h4><span class="desc-valor">a partir </span>R$ 37,00</h4>
+                        <!-- <div class="aba-info preco">
+                            <span class="desconto-feito">R$ 23,20</span>
+                            <span class="desc-valor">R$ 14,90</span>
+                        </div> -->
+                    </div>
+                </aside>
+            </a>
+        </div> <!--------------------- final do row -->
+        <div class="row aba-produtos-linha  ">
+            <!-- -------------------------------------------------------------------------------PRODUTO 9 -->
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto" class="col-sm-3">
+                    <h2>Ração Nutrilus</h2>
+                    <div>
+                        <img src="src/imagens/racao.png" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
+                        <p>Ração Seca Nutrilus Pro+ Frango & Carne para Cães Adultos.</p>
+                    </div>
+                    <div class="valores">
+                        <h4> <span class="desc-valor">a partir </span> R$ 50,99</h4>
+                    </div>
+
+                </aside>
+            </a>
+            <!-- -------------------------------------------------------------------------------PRODUTO 10 -->
+            <a href="item.html" class="col-sm-3">
+                <aside class="produto" class="col-sm-3">
+                    <h2>Tapetes</h2>
+                    <div>
+                        <img src="src/imagens/toalhas.jpg" class="imagem-produto" alt="">
+                    </div>
+                    <div class="descricao">
+
+                        <p>Super Secão Citrus Tapetes Higiênicos 30 Unidades Para Cães.</p>
+                    </div>
+                    <div class="valores">
+                        <h4><span class="desc-valor">a partir </span>R$ 89,00</h4>
+                    </div>
+                </aside>
+
+                <!-- -------------------------------------------------------------------------------PRODUTO 11 -->
+                <a href="item.html" class="col-sm-3">
+                    <aside class="produto" class="col-sm-3">
+                        <h2>Areia Higiênica </h2>
+                        <div>
+                            <img src="src/imagens/areia7.png" class="imagem-produto" alt="">
+                        </div>
+                        <div class="descricao">
+                            <p>Areia Higiênica Meau Biodegradável Grãos Médios para Gatos.</p>
+                        </div>
+                        <div class="valores">
+                            <h4> <span class="desc-valor">a partir </span> R$ 24,99</h4>
+                        </div>
+
+                    </aside>
+                </a>
+                <!-- -------------------------------------------------------------------------------PRODUTO 12-->
+                <a href="item.html" class="col-sm-3">
+                    <aside class="produto" class="col-sm-3">
+                        <h2>Bowl Future Pet</h2>
+                        <div>
+                            <img src="src/imagens/travessa.jpg" class="imagem-produto" alt="">
+                        </div>
+                        <div class="descricao">
+
+                            <p>Material resistente à ferrugem e tem peso para não deslizar.</p>
+                        </div>
+                        <div class="valores">
+                            <h4><span class="desc-valor">a partir </span>R$ 37,00</h4>
+                        </div>
+                    </aside>
+                </a>
 
 
 
