remoção de pets

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
      
       <div class="col-sm-5 mt-4 mb-3">
-        <h4 style="text-align: center;" class="titulox">Associação Casa do Cão e Gato</h4>
-        <img src="src/imagens/cachorro.png" id="area-cachorro" width="50px" alt="">
+        <!-- <h4 style="text-align: center;" class="titulox">Associação Casa do Cão e Gato</h4>
+        <img src="src/imagens/cachorro.png" id="area-cachorro" width="50px" alt=""> -->
         <input type="text" placeholder="O que você procura?" name="busca" class="busca">
         <span class="buscar-produto">
           <img src="src/imagens/lupa.png" alt="" width="30px">
-          <img src="src/imagens/gatinho.png" width="50px" alt="">
+          <!-- <img src="src/imagens/gatinho.png" width="50px" alt=""> -->
         </span>
 
       </div>
