Ajuste de responsividade em todo o site e criação da area carrinho

--- a/login.html
+++ b/login.html
@@ -72,12 +72,12 @@
                     <legend class="">Acesse sua conta</legend>
                     <aside class="setorCadastro">
                         <!-- Email <br> -->
-                        <input name="email" id="email" class="input" type="email" placeholder="Email" required>
+                        <input name="email" id="email" class="inputlogin" type="email" placeholder="Email" required>
                         <div class="esquecisenha"><a href="cadastro.html">Esqueci minha senha</a></div>
 
                         <div class="aba-senha">
                             <!-- <label for="">Senha</label> -->
-                            <input name="senha" id="senha" type="password" placeholder="Senha" required>
+                            <input name="senha" id="senha" class="inputlogin" type="password" placeholder="Senha" required>
                             <img src="../imagens/olhoAberto.png" class="visualizarSenha" width="20px" alt="">
                         </div>
 
